objects/Best_Practice_Evaluation__c.object
<CustomObject>
    <fields>
        <fullName>No_Global_Negs_Added__c</fullName>
        <label>No Global Negs Added</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Campaigns_Relevant_to_Budget__c</fullName>
        <description>$200 per campaign</description>
        <label>Number of Campaigns Relevant to Budget</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
                <value>
                    <fullName>Error Found/Fixed</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Strikes__c</fullName>
        <label>Number of Strikes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OPO_Standards_Followed__c</fullName>
        <inlineHelpText>Do all on-page optimizations follow Yodle best practices?</inlineHelpText>
        <label>OPO Standards Followed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Partially Compliant</fullName>
                </value>
                <value>
                    <fullName>Non-Compliant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>One_Geo_Template2__c</fullName>
        <label>One Geo Template</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>One_Geo_Template__c</fullName>
        <inlineHelpText>one geo template is used, unless 2 locations with over 30 miles distance are present</inlineHelpText>
        <label>One Geo Template (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opt_Protocols__c</fullName>
        <label>Optimization Protocols Followed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Organic_Evaluation_For__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>On Page Evaluation For</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Best_Practice_Evaluations9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overall_Opt_Score__c</fullName>
        <description>Average of the optimization evaluation percentages</description>
        <formula>(Main_Issue_OPT__c +  Opt_Protocols__c + Detailed_OPT_Notes__c)/3</formula>
        <label>Overall Opt Score (%)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Overall_Setup_Grade__c</fullName>
        <description>Average of the 6 grading fields on the Setup Evaluation case</description>
        <formula>(((40/100) * (Geo_Template_Grade2__c)) +  ((25/100) * (Ads_Overall_Grade2__c)) + ((25/100) * (Website_Overall_Grade3__c)) +  ((5/100) * (Negatives_Overall_Grade2__c) + ((5/100) * ( BPM_Overall_Grade2__c ))))</formula>
        <label>Overall Setup Grade (%)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Page_Count__c</fullName>
        <inlineHelpText>To track Website Tier Compliance - LOCAL accounts only</inlineHelpText>
        <label>Page Count</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Compliant</fullName>
                </value>
                <value>
                    <fullName>Non Compliant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Performance_Analysis_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a lookup to the related Performance Analysis record for the best practice evaluation</description>
        <label>Performance Analysis Name</label>
        <referenceTo>Performance_Analysis__c</referenceTo>
        <relationshipLabel>Best Practice Evaluations</relationshipLabel>
        <relationshipName>Best_Practice_Evaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone_Correct_in_Video__c</fullName>
        <label>Phone Correct in Video</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Correct_on_YouTube__c</fullName>
        <label>Phone Correct on YouTube</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Number_Not_Displayed_in_Header__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Phone Number Not Displayed in Header</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Numbers__c</fullName>
        <inlineHelpText>phone numbers are tagged correctly and display properly on website</inlineHelpText>
        <label>Phone Numbers (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Photo_Gallery__c</fullName>
        <inlineHelpText>To track Website Tier Compliance - LOCAL accounts only</inlineHelpText>
        <label>Photo Gallery</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Compliant</fullName>
                </value>
                <value>
                    <fullName>Non Compliant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Poor_Page_Formatting__c</fullName>
        <description>Anything that disrupts the flow of the page (excessive spacing, poor image alignment, etc.)</description>
        <inlineHelpText>Anything that disrupts the flow of the page (excessive spacing, poor image alignment, etc.)</inlineHelpText>
        <label>Poor Page Formatting</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
                <value>
                    <fullName>Error Found/Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Poor_Pg_Formatting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bullets, Spacing, etc.</description>
        <label>Poor Pg Formatting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call Answering</fullName>
                </value>
                <value>
                    <fullName>Local SEM</fullName>
                </value>
                <value>
                    <fullName>Partner SEM</fullName>
                </value>
                <value>
                    <fullName>National SEM</fullName>
                </value>
                <value>
                    <fullName>Outrank</fullName>
                </value>
                <value>
                    <fullName>Outrank +</fullName>
                </value>
                <value>
                    <fullName>YO 2.0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Products_Selected_for_Relationship__c</fullName>
        <inlineHelpText>Which product set is the client set up on?</inlineHelpText>
        <label>Products Selected for Relationship:</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YO2</fullName>
                </value>
                <value>
                    <fullName>OR3</fullName>
                </value>
                <value>
                    <fullName>Mix</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pronounce_Company_Name_Correctly__c</fullName>
        <label>Pronounce Company Name Correctly?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proper_HTML__c</fullName>
        <label>Proper HTML</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proper_SC_Amount__c</fullName>
        <inlineHelpText>all necessary steps to clean up traffic were taken (match types, negatives, etc)</inlineHelpText>
        <label>Traffic Optimized (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Read_Correctly_No_Typos_Grammar_Errors__c</fullName>
        <inlineHelpText>Includes Camelcasing Ads.</inlineHelpText>
        <label>Read Correctly - No Typos/Grammar Errors</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Read_Correctly__c</fullName>
        <inlineHelpText>good character limit utilization across all ads, no typos present</inlineHelpText>
        <label>Read Correctly (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Relevant_Images__c</fullName>
        <label>Relevant Images (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Reporting_Notes__c</fullName>
        <label>Reporting Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Robots_txt_No_Index__c</fullName>
        <label>Robots.txt &amp; No Index</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segment_Specific_Changes__c</fullName>
        <label>Segment/Locale Specific Changes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
                <value>
                    <fullName>Error Found / Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Group_Grade__c</fullName>
        <formula>Correct_Number_of_Service_Groups__c</formula>
        <label>Service Group Grade (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Services_Requested_on_Site__c</fullName>
        <inlineHelpText>all advertised services exist on the website (except dynamic mirrors)</inlineHelpText>
        <label>Svs Requested on Site (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Serving_Area_Displayed_in_Header__c</fullName>
        <label>Serving Area Displayed in Header</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Serving_Area_Not_Displayed_in_Header__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Serving Area Not Displayed in Header</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Serving_Area__c</fullName>
        <inlineHelpText>serving area is present and accurately depicts mobile vs. stationary</inlineHelpText>
        <label>Serving Area (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Serving_Area_bpm__c</fullName>
        <inlineHelpText>serving area within the ASW is accurate</inlineHelpText>
        <label>Serving Area ASW (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Setup_Notes__c</fullName>
        <inlineHelpText>Add any relevant account setup notes here.</inlineHelpText>
        <label>Setup Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sitelinks_Up_to_Date__c</fullName>
        <label>Sitelinks Up to Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_for_up_to_date_location_NAP_data__c</fullName>
        <label>Source for up-to-date location NAP data?</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spell_Check__c</fullName>
        <label>Spell Check</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spelling_Error_s__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Spelling Error(s)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spelling_Grammar_Errors__c</fullName>
        <description>Typos, incorrect punctuation, etc.</description>
        <inlineHelpText>Typos, incorrect punctuation, etc.</inlineHelpText>
        <label>Spelling &amp; Grammar Errors</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
                <value>
                    <fullName>Error Found/Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Complete - Review and Changes Needed</fullName>
                </value>
                <value>
                    <fullName>Complete - Review Only</fullName>
                </value>
                <value>
                    <fullName>In Progress - Auditing</fullName>
                </value>
                <value>
                    <fullName>Audit Complete - In Review</fullName>
                </value>
                <value>
                    <fullName>In Progress - Tasking</fullName>
                </value>
                <value>
                    <fullName>Tasking Complete - In Review</fullName>
                </value>
                <value>
                    <fullName>Audit &amp; Update Tasks Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strange_Characters2__c</fullName>
        <label>Strange Characters</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
                <value>
                    <fullName>Error Found/Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strange_Characters__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Strange Characters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suggested_Improvement_for_IMS__c</fullName>
        <label>Suggested Improvement for IMS</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Suggested_Steps_to_Correct_Issue__c</fullName>
        <label>Suggested Steps to Correct Issue</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Summarize_scope_of_vendor_s_work__c</fullName>
        <inlineHelpText>If yes, summarize the scope of the vendors work</inlineHelpText>
        <label>Summarize scope of vendor's work</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Taxonomies__c</fullName>
        <inlineHelpText>Describe special taxonomy requirements for the relationship if any.</inlineHelpText>
        <label>Taxonomies</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taxonomy_gaps_exist__c</fullName>
        <inlineHelpText>Do gaps exist between the expected taxonomy and the actual taxonomy used?</inlineHelpText>
        <label>Taxonomy gaps exist?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Template_Out_of_Segment__c</fullName>
        <inlineHelpText>To track Website Tier Compliance - LOCAL accounts only</inlineHelpText>
        <label>Template Out of Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Compliant</fullName>
                </value>
                <value>
                    <fullName>Non Compliant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Text_Too_Close_to_Image2__c</fullName>
        <description>Text right up against edge of image or widget column</description>
        <inlineHelpText>Text right up against edge of image or widget column</inlineHelpText>
        <label>Text Too Close to Image</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
                <value>
                    <fullName>Error Found/Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Text_Too_Close_to_Image__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Text Too Close to Image</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Three_Ads_DKI_Ad_Copies_for_Mobile__c</fullName>
        <label>Three Ads - DKI Ad Copies for Mobile</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Three_Ads__c</fullName>
        <inlineHelpText>3 ads are present in every SC</inlineHelpText>
        <label>Three Ads (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Title_Tags__c</fullName>
        <label>Title Tags</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Too_Much_White_Space2__c</fullName>
        <description>70% of the body content section of a page is white</description>
        <inlineHelpText>70% of the body content section of a page is white</inlineHelpText>
        <label>Too Much White Space</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
                <value>
                    <fullName>Error Found/Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Too_Much_White_Space__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Too Much White Space</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tracking_Code_Present__c</fullName>
        <inlineHelpText>correct tracking code is present on every page</inlineHelpText>
        <label>Tracking Code Present (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Typos__c</fullName>
        <inlineHelpText>no typos are present on the website</inlineHelpText>
        <label>Typos (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>USPs_Added__c</fullName>
        <inlineHelpText>all USPs are present within the ASW</inlineHelpText>
        <label>USPs Added (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>USPs_added2__c</fullName>
        <label>Appropriate USPs</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unpaid_Number__c</fullName>
        <label>Unpaid Number</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User completing the evaluation.</description>
        <label>Evaluated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Best_Practice_Evaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Valid_address_no_PO_Boxes_for_SEO_Combo__c</fullName>
        <label>Valid Address</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_Partner_Issues__c</fullName>
        <inlineHelpText>Are there observable vendor issue within this relationship? Are third parties interfering with the overall SEO performance?</inlineHelpText>
        <label>Vendor / Partner Issues</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <inlineHelpText>If the client has a previous or existing vendor please list.</inlineHelpText>
        <label>List the Vendor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_to_Email_Form_Customization__c</fullName>
        <inlineHelpText>To track Website Tier Compliance - LOCAL accounts only</inlineHelpText>
        <label>Web-to-Email Form Customization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Compliant</fullName>
                </value>
                <value>
                    <fullName>Non Compliant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Website_Built_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Website Evaluation For</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Best_Practice_Evaluations3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Website_Fufillment_Notes__c</fullName>
        <label>Website Fufillment Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Website_Implementation_Type__c</fullName>
        <inlineHelpText>What type of website setup was implemented?</inlineHelpText>
        <label>Website Implementation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client Owned Domains w/ Adversite</fullName>
                </value>
                <value>
                    <fullName>Client-Side</fullName>
                </value>
                <value>
                    <fullName>YO Domains w/ Adversite</fullName>
                </value>
                <value>
                    <fullName>Mix</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Website_Overall_Grade3__c</fullName>
        <description>Average of the website and landing page quality evaluation grades.</description>
        <formula>( Phone_Numbers__c + Serving_Area__c +  Tracking_Code_Present__c) / 3</formula>
        <label>Website Overall Grade (%)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Website_indexed_on_Google__c</fullName>
        <label>Website indexed on Google</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Which_CMS_Used__c</fullName>
        <inlineHelpText>Which CMS is used to publish the websites?</inlineHelpText>
        <label>Which CMS is used?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CMS 1</fullName>
                </value>
                <value>
                    <fullName>CMS 2</fullName>
                </value>
                <value>
                    <fullName>Client-Side</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Who_generates_the_raw_report__c</fullName>
        <inlineHelpText>Who creates the raw data file used in custom reporting?</inlineHelpText>
        <label>Who generates the raw report</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FP&amp;A</fullName>
                </value>
                <value>
                    <fullName>Yodle Live Dashboard</fullName>
                </value>
                <value>
                    <fullName>CS</fullName>
                </value>
                <value>
                    <fullName>SEO Mops</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Who_produces_the_report__c</fullName>
        <inlineHelpText>Who is directly responsible for any SEO performance reporting shared with client?</inlineHelpText>
        <label>Who produces the report</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RM</fullName>
                </value>
                <value>
                    <fullName>Senior Consultant</fullName>
                </value>
                <value>
                    <fullName>Lead Consultant</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Lead Analyst</fullName>
                </value>
                <value>
                    <fullName>No Reporter Assigned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Word_s_Missing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Word(s) Missing/Unnecessary Word,Space</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Yellowbot_Enabled__c</fullName>
        <label>Yellowbot Enabled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>